# ref-verify

./: .gitignore  AGENT_USAGE.md  CHANGELOG.md  CONTRIBUTING.md  README.ko.md  README.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml  live-smoke.yml  publish-pypi.yml
docs/superpowers/plans/: 2026-06-08-release-automation.md
docs/superpowers/specs/: 2026-06-08-release-automation-design.md
evals/: cli_regression.jsonl  cli_regression.md  run_cli_regression.py
scripts/: package_smoke.py
src/ref_verify/: __init__.py  abstract_lookup.py  batch.py  claim_check.py  cli.py  crossref.py  doi_check.py  numeric_claim.py  openalex.py  semantic_scholar.py
tests/: test_abstract_sources.py  test_batch.py  test_claim_check.py  test_cli.py  test_crossref.py  test_doi_check.py  test_numeric_claim.py  test_package_smoke.py  test_skill_docs.py
tests/fixtures/: numeric_claim_eval.jsonl
